asgn3/make.out
tests/ReuleauxPolygonTest.cc: In member function ‘virtual void ReuleauxPolygon_TouchOutside_Test::TestBody()’:
tests/ReuleauxPolygonTest.cc:84:22: warning: variable ‘rt’ set but not used [-Wunused-but-set-variable]
   84 |     ReuleauxTriangle rt = ReuleauxTriangle(rt_vertices);
      |                      ^~
tests/ReuleauxPolygonTest.cc: In member function ‘virtual void ReuleauxPolygon_Conincedent_Test::TestBody()’:
tests/ReuleauxPolygonTest.cc:98:22: warning: variable ‘rt’ set but not used [-Wunused-but-set-variable]
   98 |     ReuleauxTriangle rt = ReuleauxTriangle(rt_vertices);
      |                      ^~
In file included from /usr/include/gtest/gtest.h:62,
                 from tests/ReuleauxReuleauxTest.cc:2:
tests/ReuleauxReuleauxTest.cc: In member function ‘virtual void ReuleauxReuleaux_Contained_Test::TestBody()’:
tests/ReuleauxReuleauxTest.cc:22:32: error: request for member ‘ContainedBy’ in ‘inner_vertices’, which is of non-class type ‘Point [3]’
   22 |     ASSERT_TRUE(inner_vertices.ContainedBy(outter));
      |                                ^~~~~~~~~~~
